Bug 158534 - Print dialog's Help button opens two pages (including a 404 if from the Writer tab)
Summary: Print dialog's Help button opens two pages (including a 404 if from the Write...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0 target:7.6.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3 Print-Dialog
  Show dependency treegraph
 
Reported: 2023-12-05 08:43 UTC by Stéphane Guillou (stragu)
Modified: 2023-12-08 13:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2023-12-05 08:43:39 UTC
Steps:
0. Open Writer or Calc
1. File > Print
2. Click "Help" button

Result: leads to two help pages:
* HID=vcl/ui/printdialog/PrintDialog#bm_id0818200912034231 : https://help.libreoffice.org/7.6/en-US/text/shared/01/01130000.html
* HID=vcl/ui/printdialog/___object_2___#bm_@@nowidget@@ : https://help.libreoffice.org/7.6/en-US/text/shared/01/01130000.html

If done from the "LibreOffice Writer" (or "LibreOffice Calc") tab, the second one uses HID=modules/swriter/ui/printeroptions/box (or HID=modules/scalc/ui/printeroptions/box) instead and leads to a 404.

Does not happen with VCL gen.

Started in 7.2, no repro in 7.1. Still reproduced in recent trunk build:

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 619500d6919c227e734b119481a4b334972e0b7b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bibisected with linux-64-7.2 repro to first bad build commit [adf2ddd094566629d48ca8ce1a945113cd086d4c] which points to core commit:

commit 1afbc98428f7f8cb93a269eeaacc20fc0fa22b96
author	Caolán McNamara 	Wed Jun 02 19:54:12 2021 +0100
committer	Caolán McNamara 	Wed Jun 02 21:48:47 2021 +0200
gtk4: get fancy blue "suggested-action" button for Print in print dialog
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116623

Caolán, can you please have a look?
Comment 1 Commit Notification 2023-12-05 13:43:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a639b7432e7d35b271fbfea9021f5df56d681006

Resolves: tdf#158534 two help pages from print help button

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-12-05 16:19:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e507fd525404d5ac078a47650df11e5e18a88a81

Related: tdf#158534 set fallback help page for optional print content

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-12-06 18:13:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/bde00b3d8748cc4642300f2a961fa3f2add85c73

Resolves: tdf#158534 two help pages from print help button

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-12-06 18:14:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/25950b4440d8da4a20f311f94dd9e1884d0bebb9

Related: tdf#158534 set fallback help page for optional print content

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Stéphane Guillou (stragu) 2023-12-08 13:38:39 UTC
Verified fix for both tabs in:

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0ddd9f7e055a0c1ecb120de3e40c3fdb8373e9dc
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Caolán!