Resolves: tdf#158534 two help pages from print help button

its either use the default "help" response, or have an explicit
handler for the help button.

Its more consistent to just use the default "help" response for
the print dialog as done everywhere else.

Change-Id: I0bb173e67a3bea1c10cc315cfcf212376f2710c2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160340
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>