vcl/inc/printdlg.hxx
@@ -131,7 +131,6 @@ namespace vcl
 
         std::unique_ptr<weld::Button>           mxOKButton;
         std::unique_ptr<weld::Button>           mxCancelButton;
-        std::unique_ptr<weld::Button>           mxHelpButton;
 
         std::unique_ptr<weld::Button>           mxBackwardBtn;
         std::unique_ptr<weld::Button>           mxForwardBtn;
